fix: fix brand size on tablet

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ pre, code {
     }
     
     .navbar-brand img {
-        max-height: 70px;
+        max-height: 50px;
     }
     
     .navbar .nav-link {
